[tool.poetry]
name = "jaffle-shop-snowflake"
version = "0.1.0"
description = ""
authors = ["DataRecce"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
dbt-core = "^1.8.7"
dbt-snowflake = "^1.8.3"
boto3 = "^1.34.45"
montecarlodata = "^0.80.0"
setuptools = "^69.0.3"
recce = "^0.40.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
